:bug: Social image positioning on firefox

--- a/src/css/partials/page-components.css
+++ b/src/css/partials/page-components.css
@@ -70,6 +70,8 @@
   width: 100%;
   height: 40rem;
   overflow: hidden;
+  top: 0;
+  left: 0;
 }
 
 .social-image {
